--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
@@ -19,6 +21,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
+    "react-router-dom": "^5.3.4",
     "typescript": "5.0.4"
   }
 }
